# child-diarization

./: .gitignore  CLAUDE.md  conftest.py  cross_experiment_error_comparison.py  cross_experiment_error_comparison_seen_child.py  error_analysis_summary.md  run_usc_playlogue.sh  seedlings.sh  seedlings_import.py  seedlings_launch.py  seedlings_tasks.json  wavs.txt
babar_combined_runs/: all_features_test_predictions.csv  all_model_results.json  diarizer_plus_phoneme_test_predictions.csv  embedding_all_test_predictions.csv  enrollment_only_test_predictions.csv  gbm_all_features_test_predictions.csv  gbm_diarizer_all_test_predictions.csv  gbm_diarizer_plus_phoneme_test_predictions.csv  gbm_embedding_all_test_predictions.csv  gbm_phoneme_all_test_predictions.csv  test_features.csv  (+16 more)
synthesis/: evaluate.py  generate.py  pyproject.toml  train.py
synthesis/configs/: vae_12m.yaml  vits_34m.yaml
synthesis/data/: extraction_log.csv
synthesis/data/12_16m/: train_manifest.csv  val_manifest.csv
synthesis/data/34_38m/: train_manifest.csv  val_manifest.csv
synthesis/eval_results/12_16m/: eval_results.json
synthesis/eval_results/34_38m/: eval_results.json
synthesis/logs/: synth_train_12649111.err
synthesis/models/: __init__.py  vae_model.py  vits_model.py
synthesis/scripts/: count_segments.py  extract_segments.py  plot_pipeline_family_summary.py
synthesis/slurm/: train_synthesis.sh
video/: SETUP.md  debug_loconet.py  extract_face_tracks_bids.py  pyproject.toml  run_asd.py  talknet_child_finetune.py
video/slurm/: extract_face_tracks_bids.sh  run_talknet_finetune.sh
(+56326 files in other folders)
