[project]
name = "child-speech-synthesis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "coqui-ai-tts>=0.22.0",
    "librosa>=0.10.0",
    "fastdtw>=0.3.4",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "speechbrain>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
